@@ -23,19 +23,14 @@ import com.sun.source.tree.LiteralTree;
 import com.sun.source.tree.Tree;
 import com.sun.source.tree.Tree.Kind;
 import com.sun.source.util.TreePath;
-import java.util.List;
-import javax.lang.model.SourceVersion;
-import org.netbeans.api.java.queries.CompilerOptionsQuery;
 import org.netbeans.api.java.source.CompilationInfo;
-import org.netbeans.modules.java.hints.errors.Utilities;
+import org.netbeans.modules.java.hints.Feature;
 import org.netbeans.spi.editor.hints.ErrorDescription;
 import org.netbeans.spi.editor.hints.Fix;
-import org.netbeans.spi.java.hints.ConstraintVariableType;
 import org.netbeans.spi.java.hints.ErrorDescriptionFactory;
 import org.netbeans.spi.java.hints.Hint;
 import org.netbeans.spi.java.hints.HintContext;
 import org.netbeans.spi.java.hints.JavaFix;
-import org.netbeans.spi.java.hints.TriggerPattern;
 import org.netbeans.spi.java.hints.TriggerTreeKind;
 import org.openide.util.NbBundle.Messages;
 
@@ -47,13 +42,12 @@ import org.openide.util.NbBundle.Messages;
 })
 public class ConvertToTextBlock {
 
-private static final int TEXT_BLOCK_PREVIEW_JDK_VERSION = 14;
-
     @TriggerTreeKind(Kind.PLUS)
     @Messages("ERR_ConvertToTextBlock=Can be converted to text block")
     public static ErrorDescription computeWarning(HintContext ctx) {
-        if (Utilities.isJDKVersionLower(TEXT_BLOCK_PREVIEW_JDK_VERSION) && !CompilerOptionsQuery.getOptions(ctx.getInfo().getFileObject()).getArguments().contains("--enable-preview"))
+        if (!Feature.TEXT_BLOCK.isEnabled(ctx.getInfo())) {
             return null;
+        }
         if (ctx.getPath().getParentPath() != null && getTextOrNull(ctx.getPath().getParentPath()) != null) {
             return null;
         }
